<resources>
    <string name="app_name">大学去哪儿</string>
    <string name="phone_login">手机登录</string>
    <string name="phone_reg">注册帐号</string>
    <string name="message_fg">消息</string>
    <string name="contact_fg">联系人</string>
    <string name="dongtai_fg">动态</string>
    <string name="setting_fg">设置</string>
    <string name="sample_fg">普通</string>
    <string name="news_fg">新闻</string>
    <string name="search_title">搜索</string>
    <string name="title_activity_login">登录</string>
    <string name="title_activity_college_detail">CollegeDetailActivity</string>
    <string name="college_detail_admit_no_data">"Σ( ° △ °|||)
    没有纳入该校数据，
    也可能本省不招生，
    去、去别处看看吧。"</string>
    <string name="about_app_version">版本号：V%1$s</string>
    <string name="about_company_contact">"官网：app.lexue.com
微博：乐学高考志愿
微信公众账号：高考提分神器"</string>
    <string name="about_company_copyright">"乐学创想 版权所有
©2015 lexue.com 京ICP备 15003527号"</string>
    <string name="about_content">"本软件由乐学在线出品，是高考报考的必备工具。
其采用自主研发的智能算法，汇集历年高考报考、录取大数据，结合多位名师数年报考经验，能为考生精准推荐最佳匹配度的高校。
软件可迅速根据条件筛选目标高校，兼展示、分析各专业就业数据，帮助考生绕开专业选择陷阱，走对第一步，提前规避就业难题。"</string>
    <string name="account_grade">年级</string>
    <string name="account_grade_k10">高一</string>
    <string name="account_grade_k11">高二</string>
    <string name="account_grade_k12">高三</string>
    <string name="account_nikename_des">昵称必须由2~8个字符组成</string>
    <string name="account_nikename_tip">请尽量输入真实姓名，需要2-8个字</string>
    <string name="account_password_des">密码由6~18个字符组成，英文区分大小写</string>
    <string name="account_subjects">文理</string>
    <string name="account_subjects_arts">文科</string>
    <string name="account_subjects_none">不分</string>
    <string name="account_subjects_none_1">不分文理</string>
    <string name="account_subjects_science">理科</string>
    <string name="action_settings">Settings</string>
    <string name="activite_code">短信激活码</string>
    <string name="admission_college_count_des">%1$d所</string>
    <string name="admission_probility_des">录取概率%1$d%%以上</string>
    <string name="admission_probility_tip">录取概率：</string>
    <string name="album_photo_picker_data_empty">手机还没有图片哦,去拍几张吧~</string>
    <string name="album_photo_picker_data_load_error">加载数据出错</string>
    <string name="album_photo_picker_delete_photo_confirm">确定删除这张照片？</string>
    <string name="album_photo_picker_exceed_max_select_photo_tip">最多只能选择%d张图片</string>
    <string name="album_photo_picker_finish_text">完成</string>
    <string name="album_photo_picker_finish_text_format">完成(%1$d/%2$d)</string>
    <string name="album_photo_picker_list_data_empty_error">列表数据为空</string>
    <string name="album_photo_picker_no_exist_sdcard">SD卡不存在，不能拍照</string>
    <string name="album_photo_picker_pic_can_not_found">SD卡不存在，不能拍照</string>
    <string name="album_photo_picker_select_list_num_exceed_max_select_num">选中图片超出最大数目限制</string>
    <string name="amap_api_appkey">497f22ce685f0f470782b4d909e08d8d</string>
    <string name="answer_deleted_data_tip">该答案已被删除</string>
    <string name="answer_publish_discard_content_confirm">确定放弃此次回答？</string>
    <string name="api_common_failed_tip">操作失败</string>
    <string name="api_common_request_tip">正在处理中...</string>
    <string name="api_common_success_tip">操作成功</string>
    <string name="api_update_user_profile_request_failed_tip">更新资料失败</string>
    <string name="api_update_user_profile_request_success_tip">更新资料成功</string>
    <string name="api_update_user_profile_request_tip">正在更新资料...</string>
    <string name="api_upload_avatar_get_file_error_tip">获取头像出错咯</string>
    <string name="api_upload_avatar_request_failed_tip">上传头像失败</string>
    <string name="api_upload_avatar_request_success_tip">上传头像成功</string>
    <string name="api_upload_avatar_request_tip">正在上传头像</string>
    <string name="app_name_qq">QQ登录</string>
    <string name="app_name_weibo">微博登录</string>
    <string name="app_name_weixin">微信登录</string>
    <string name="app_version_name">2.0.0</string>
    <string name="app_wap_url">App.lexue.com</string>
    <string name="area">地区</string>
    <string name="arts_student">文科生</string>
    <string name="attach_file">文件</string>
    <string name="attach_give_gift">送礼物</string>
    <string name="attach_location">位置</string>
    <string name="attach_picture">照片</string>
    <string name="attach_smile">表情</string>
    <string name="attach_take_pic">拍摄</string>
    <string name="attach_voice_call">语音电话</string>
    <string name="back_text">返回</string>
    <string name="batchqueryactivity_arts">文科</string>
    <string name="batchqueryactivity_batch_query">批次线查询</string>
    <string name="batchqueryactivity_firstbatch">第一批</string>
    <string name="batchqueryactivity_location">地区</string>
    <string name="batchqueryactivity_science">理科</string>
    <string name="batchqueryactivity_secondbatch">第二批</string>
    <string name="batchqueryactivity_thirdbatch">第三批</string>
    <string name="bind_phone_matcher_error_tip">手机号码格式错误</string>
    <string name="button_cancel_download">Cancel</string>
    <string name="button_more">更多</string>
    <string name="button_pushtotalk">按住说话</string>
    <string name="button_queue_for_wifi">Queue</string>
    <string name="button_releasetofinish">松开结束</string>
    <string name="button_send">发送</string>
    <string name="button_start_now">Start now</string>
    <string name="cancel_text">取消</string>
    <string name="cannot_next_page">本页题目还没有答完，不能翻页哦。</string>
    <string name="cannot_submit_answer">本页题目还没有答完，不能提交哦。</string>
    <string name="chat_filter_all">全部</string>
    <string name="chat_filter_only_teacher">只看老师</string>
    <string name="chat_text_ack_msg">已读</string>
    <string name="chat_text_delivered_msg">送达</string>
    <string name="chatroom_admin">课代表</string>
    <string name="chatroom_catch_teacher">抓住TA</string>
    <string name="chatroom_catch_teacher_success">撒花！恭喜%1$s成功抓到了%2$s老师！</string>
    <string name="chatroom_fans_dialog_granted_admin">任命为课代表</string>
    <string name="chatroom_fans_dialog_granted_admin_msg">恭喜%1$s同学，被%2$s老师任命为代表。撒花！</string>
    <string name="chatroom_fans_dialog_revoked_admin">解除课代表</string>
    <string name="chatroom_fans_dialog_revoked_admin_msg">解除%1$s的课代表</string>
    <string name="chatroom_give_gift">赠送</string>
    <string name="chatroom_give_gift_format">%1$s 使用新版本送给%2$s老师 一个礼物</string>
    <string name="chatroom_layout_evaluate_submit_str">立即评价</string>
    <string name="chatroom_layout_evaluate_submit_str_stop">咨询已结束</string>
    <string name="chatroom_other_teacher_admin">%1$s课代表</string>
    <string name="chatroom_recharge">充值</string>
    <string name="chatroom_send_gift_success">赠送成功</string>
    <string name="chatroom_teacher_has_caught">"老师已被别
人抓走了！"</string>
    <string name="chatroom_teacher_not_in_room">"老师还没来
请耐心等待"</string>
    <string name="chatroom_you_catch_teacher_success">成功抓到老师</string>
    <string name="classroom_main_chat_title">聊天</string>
    <string name="classroom_main_fans_online">在线</string>
    <string name="classroom_main_fans_title">粉丝</string>
    <string name="classroom_main_joined_room">强势插入</string>
    <string name="classroom_main_left_room">离开聊课室</string>
    <string name="classroom_main_list_title">列表</string>
    <string name="classroom_main_teacher_format">%s老师</string>
    <string name="classroom_main_teacher_joined_room">强势插入，撒花，欢呼~~~</string>
    <string name="classroom_main_videos_title">视频</string>
    <string name="click_setting_area">点击设置高考地区</string>
    <string name="coffeehouse_comment_anonymity_title">匿名发送</string>
    <string name="coffeehouse_comment_illegal_title">发送失败，包含违禁字符</string>
    <string name="coffeehouse_comment_title">评论</string>
    <string name="coffeehouse_delete_comment_text">确定删除你的答案?</string>
    <string name="coffeehouse_delete_post_text">确定删除你的提问?</string>
    <string name="coffeehouse_delete_postmessage_text">确定删除你的消息?</string>
    <string name="coffeehouse_delete_reply_text">确定删除你的回复?</string>
    <string name="coffeehouse_delete_text">删除</string>
    <string name="coffeehouse_home_title">乐学咖啡厅</string>
    <string name="coffeehouse_max_input_title">最多可输入255个汉字</string>
    <string name="coffeehouse_pub_vote_submit">立即投票</string>
    <string name="coffeehouse_publish_bulletin_answer_error_contain_forbidden_words">发送失败，包含违禁字符</string>
    <string name="coffeehouse_publish_bulletin_clear_input">确定清空输入内容？</string>
    <string name="coffeehouse_publish_bulletin_content_cannot_empty">不能发送空白消息哦!</string>
    <string name="coffeehouse_publish_bulletin_content_meet_limit">最多可输入140个汉字!</string>
    <string name="coffeehouse_publish_bulletin_content_meet_limit_format">最多可输入%1$s汉字!</string>
    <string name="coffeehouse_publish_bulletin_pic_compress_error">手机存储空间不足!</string>
    <string name="coffeehouse_publish_bulletin_pic_decord_error">图片解码出错!</string>
    <string name="coffeehouse_publish_bulletin_post_error_contain_forbidden_words">发布失败，包含违禁字符</string>
    <string name="coffeehouse_publish_bulletin_post_error_publish_post_forbidden">由于违规发布内容已被冻结</string>
    <string name="coffeehouse_publish_bulletin_post_failed">发贴失败!</string>
    <string name="coffeehouse_publish_bulletin_post_success">发贴成功!</string>
    <string name="coffeehouse_publish_bulletin_tip">问难题、发笔记、来爆照统统都可以</string>
    <string name="coffeehouse_publish_bulletin_upload_file_failed">上传文件失败!</string>
    <string name="coffeehouse_publish_waiting">正在发布</string>
    <string name="coffeehouse_report_content_text">针对广告、色情、反动等情况进行举报我们会尽快核实处理</string>
    <string name="coffeehouse_report_text">举报</string>
    <string name="coffeehouse_report_toast_text">举报已提交，感谢支持</string>
    <string name="coffeehouse_rule_title">吧规</string>
    <string name="college_detail_no_comment_data">这个学校的学长学姐好懒，都木有评价~~~~(>_&lt;)~~~~</string>
    <string name="college_detail_no_data">暂无信息哦，小编正在加急整理</string>
    <string name="college_query">院校查询</string>
    <string name="college_recommend">学校推荐</string>
    <string name="college_type">类别</string>
    <string name="com_facebook_loading">Loading...</string>
    <string name="comment">评价</string>
    <string name="commit_feedback">提交反馈</string>
    <string name="consult_no_info">所有咨询都在这里了</string>
    <string name="consult_notstart_text">莫心急，咨询时间尚未到.</string>
    <string name="consult_startend_text">咨询已结束</string>
    <string name="consult_time">咨询时间：%1$s %2$s~%3$s</string>
    <string name="default_user_login">登录</string>
    <string name="defult_anonymous_name">匿名同学</string>
    <string name="defult_user_name">小明</string>
    <string name="delete_new_msg_toast">确定删除该消息?</string>
    <string name="delete_text">删除</string>
    <string name="dialog_confirm_ok">确定</string>
    <string name="dialog_confirm_phone_msg">我们将发送验证码短信到这个号码：+86 %1$s</string>
    <string name="dialog_confirm_phone_title">确认手机号码</string>
    <string name="dialog_goto_supply">继续完善</string>
    <string name="dialog_have_look">再看看</string>
    <string name="dialog_loading_info">处理中……</string>
    <string name="dialog_login_failed_not_reg_tip">手机号码没有注册</string>
    <string name="dialog_login_failed_tip">账号或密码错误</string>
    <string name="dialog_login_pwd_failed_tip">密码错误</string>
    <string name="dialog_new_force_version">您的版本不能继续使用了，请马上更新</string>
    <string name="dialog_new_version">乐学高考志愿有新版本了，赶紧更新吧</string>
    <string name="dialog_registered_already_tip">该手机号码已注册</string>
    <string name="dialog_send_code_error_tip">获取验证码错误</string>
    <string name="dialog_skip">跳过</string>
    <string name="dialog_supply_tip">"完善资料将获得乐学币
你确定要跳过么"</string>
    <string name="dialog_upgrade_now">马上更新</string>
    <string name="dialog_verify_empty_tip">请输入验证码</string>
    <string name="dialog_verify_fiald_tip">验证码输入错误</string>
    <string name="dialog_wrong_info">分数有误，请重新输入</string>
    <string name="download_unknown_title">&lt;Untitled></string>
    <string name="employment">就业</string>
    <string name="empty_string" />
    <string name="next_page">下一页</string>
    <string name="pre_page">上一页</string>
    <string name="test_submit">提交</string>
</resources>