<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/footer_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="24.0dip"
        android:paddingLeft="45.0dip"
        android:paddingRight="45.0dip"
        android:paddingTop="29.0dip">

        <TextView
            android:id="@+id/pre_question"
            android:layout_width="89.0dip"
            android:layout_height="32.0dip"
            android:layout_alignParentLeft="true"
            android:background="@drawable/orange_edge_btn_selector"
            android:gravity="center"
            android:text="@string/pre_page"
            android:textColor="@color/question_btn_text_color_selector"
            android:textSize="15.0sp" />

        <TextView
            android:id="@+id/submit_answer"
            android:layout_width="89.0dip"
            android:layout_height="32.0dip"
            android:layout_alignParentRight="true"
            android:background="@drawable/orange_edge_btn_selector"
            android:gravity="center"
            android:text="@string/test_submit"
            android:textColor="@color/question_btn_text_color_selector"
            android:textSize="15.0sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/next_page"
            android:layout_width="89.0dip"
            android:layout_height="32.0dip"
            android:layout_alignParentRight="true"
            android:background="@drawable/orange_edge_btn_selector"
            android:gravity="center"
            android:text="@string/next_page"
            android:textColor="@color/question_btn_text_color_selector"
            android:textSize="15.0sp" />
    </RelativeLayout>
</LinearLayout>